[package]
name = "because"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
futures = "0.3.31"
libp2p = { version = "0.54.1", features = [ "tokio", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux", "quic"] }
tokio = { version = "1.42.0", features = ["full", "macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
